objects/ELV_Quote_Term__c/ELV_Quote_Term__c.object-meta.xml
<CustomObject>
    <label>Quote Term</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Quote Term Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>