objects/ELV_Quote_Term__c/fields/Active_Source_Versions__c.field-meta.xml
<CustomField>
    <fullName>Active_Source_Versions__c</fullName>
    <label>Active Source Versions</label>
    <summaryFilterItems>
        <field>ELV_Quote_Term_Version__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ELV_Quote_Term_Version__c.Version_Type__c</field>
        <operation>equals</operation>
        <value>Source</value>
    </summaryFilterItems>
    <summaryForeignKey>ELV_Quote_Term_Version__c.Quote_Term__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>