objects/ELV_Quote_Term__c/fields/Term_Title__c.field-meta.xml
<CustomField>
    <fullName>Term_Title__c</fullName>
    <label>Term Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>