objects/ELV_Quote_Term__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Term_Title__c</columns>
    <columns>Active_Source_Versions__c</columns>
    <columns>Inactive_Source_Versions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>